# time-geography-kepler

./: .env.example  .gitignore  AI_AGENT_WORKFLOW.md  ARCHITECTURE.md  BACKEND.md  CLAUDE.md  DEPLOY.md  FEATURES.md  PPA_ESTIMATION.md  PROFESSOR_FEEDBACK.md  README.md  dev.sh  docker-compose.prod.yml  docker-compose.yml  generate_noise_env.py  note.md  package-lock.json  package.json  time-geography.ts
.agent/rules/: claude.md
.agent/skills/: deckgl-data-pipeline.md  deckgl-layer-config.md  deckgl-performance.md  deckgl-picking.md  karpathy-guidelines.md  visual-regression.md
.claude/commands/: sync-tool.md
.github/workflows/: ci.yml  docker-publish.yml  docs.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion.md
app/back-end/: .dockerignore  CLAUDE.md  Dockerfile  gunicorn.conf.py  pyproject.toml  test_stkde_output.py
app/back-end/app/: __init__.py  constants.py  models.py  routes.py  tool_registry.py  utils.py
app/back-end/app/tools/: base.py  buffer.py  intersection.py  space_time_cube.py  stkde.py  time_geography.py  time_slicing.py  union.py
app/back-end/app/tools/space_time_prism/: __init__.py  dwell_surface.py  gps_road_network.py  interactive.py  network_prism.py  pasta.py  pasta_execution.py  ppa.py  prism_geometry.py  road_network.py  timing.py  tool.py  utils.py
app/back-end/app/tools/space_time_prism/ppa_engine/: __init__.py  dijkstra.py  extent.py  graph_build.py  graph_cache.py  profiles.py  reachability.py  snap.py  speed_adjust.py  two_anchor.py
app/back-end/tests/: conftest.py  test_buffer.py  test_health.py  test_intersection.py  test_network_prism_research_area.py  test_osm_disk_cache.py  test_osm_query.py  test_ppa_engine.py  test_research_area.py  test_space_time_cube.py  test_space_time_prism.py  test_speed_adjust.py  test_stkde.py  test_time_geography.py  test_tools_metadata.py  test_two_anchor_prism.py  test_union.py
app/front-end/: .dockerignore  CLAUDE.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
demo-datasets/: README.md  generate_demo_datasets.py  multi-user_30users.csv
docs/: index.md
sample-data/: sample-trajectory.csv
scripts/: docker-publish.sh
src/: App.tsx  main.tsx  store.tsx
test_scripts/: nakayaKD3D.js  sample.js  sample.ts
vis-json-template/: 3d_line.json
(+177 files in other folders)
