[project]
name = "time-geography-backend"
version = "1.0.0"
description = "Stateless Flask API for space-time geospatial analysis tools"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "geopandas>=1.0",
    "shapely>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pyproj>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
